# PSO

./: .gitignore  README.md  ReadMe.md  main.py  pyproject.toml
src/: animation.py  functions.py  pso.py
