[tool.poetry]
name = "pso"
version = "0.1.0"
description = "Simple implementation of the PSO algorithm"
authors = ["ivallesp <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.1.2"
numpy = "^1.18.1"
scipy = "^1.4.1"
celluloid = "^0.2.0"
tqdm = "^4.42.0"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
ipykernel = "^5.1.4"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
